scrollbar fixed

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -839,6 +839,7 @@ md-sidenav.md-sidenav-left {
 }
 ::-webkit-scrollbar {
   width: 4px;
+  height: 4px;
 }
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
